--- a/Aufgabe8/aufgabe8.html
+++ b/Aufgabe8/aufgabe8.html
@@ -167,7 +167,11 @@
 	// das Div "unten" clont
 
 
-
+function beiClickNachUnten(bild) {
+        var neu = bild.cloneNode(true);
+        neu.style.margin = "5px 10px 5px 10px";
+        document.getElementById("unten").appendChild(neu);
+    }
 
 </script>
 </body>
